--- a/src/main/webapp/pages/ViewProject/ViewProject.html
+++ b/src/main/webapp/pages/ViewProject/ViewProject.html
@@ -123,7 +123,47 @@
                                     </wm-grid>
                                 </wm-tabpane>
                                 <wm-tabpane name="tabpaneDOCUMENTS" title="DOCUMENTS"></wm-tabpane>
-                                <wm-tabpane name="tabpane4" title="MESSAGING"></wm-tabpane>
+                                <wm-tabpane name="tabpane4" title="MESSAGING">
+                                    <wm-layoutgrid name="layoutgrid16">
+                                        <wm-gridrow name="gridrow58">
+                                            <wm-gridcolumn columnwidth="12" name="gridcolumn121">
+                                                <wm-label padding="unset 0.5em" name="label28_1" caption="You may communicate with the municipality about this form by simply adding a message below."></wm-label>
+                                            </wm-gridcolumn>
+                                        </wm-gridrow>
+                                        <wm-gridrow name="gridrow59">
+                                            <wm-gridcolumn columnwidth="12" name="gridcolumn123">
+                                                <wm-livelist listclass="list-group" itemclass="list-group-item" template="true" itemsperrow="xs-1 sm-1 md-1 lg-1" class="media-list" dataset="bind:Variables.FormMessagesData.dataSet" navigation="Scroll" name="livelistFormMessages"
+                                                loadingdatamsg="Loading Messages..." nodatamessage="No Messages" orderby="postedAt:asc" disableitem="false">
+                                                    <wm-listtemplate layout="media" name="listtemplate1">
+                                                        <wm-container class="media-left media-top" name="container4" width="200px">
+                                                            <wm-picture name="Picture" class="media-object" width="32pt" height="32pt" shape="circle" picturesource="bind:!!Variables.CurrentUserDetails.dataSet.id ? 'services/cx2/Users/'+Variables.FormMessagesData.dataSet.data[$i].userId+'/content/photo' : 'resources/images/imagelists/fa-user-170.png'"></wm-picture>
+                                                        </wm-container>
+                                                        <wm-container class="media-body" padding="unset 1.5em unset 1.25em" name="container5">
+                                                            <wm-label class="pull-left" caption="bind:Variables.FormMessagesData.dataSet.data[$i].users.firstName +&quot; &quot;+Variables.FormMessagesData.dataSet.data[$i].users.lastName" name="Name" margin="0em unset 0.5em unset"
+                                                            fontsize="1.143" fontunit="em"></wm-label>
+                                                            <wm-label name="Time" class="pull-right text-muted" caption="bind:Variables.FormMessagesData.dataSet.data[$i].postedAt | toDate: 'MM/dd hh:mm'"></wm-label>
+                                                            <wm-label caption="bind:Variables.FormMessagesData.dataSet.message" name="Description" class="p text-muted"></wm-label>
+                                                            <wm-anchor margin="unset 0.5em" name="anchorViewTaggedPeople" caption="Tagged People" class="pull-right" iconclass="wi wi-tag" on-click="Widgets.dialogShowTaggedPeople.open()"></wm-anchor>
+                                                        </wm-container>
+                                                    </wm-listtemplate>
+                                                </wm-livelist>
+                                            </wm-gridcolumn>
+                                        </wm-gridrow>
+                                        <wm-gridrow name="gridrow81" padding="1em unset">
+                                            <wm-gridcolumn columnwidth="1" name="gridcolumn157_2" horizontalalign="center">
+                                                <wm-picture class="media-object" width="32pt" height="32pt" name="picture3" picturesource="bind:!!Variables.CurrentUserDetails.dataSet.id ? 'services/cx2/Users/'+Variables.CurrentUserDetails.dataSet.id+'/content/photo' : 'resources/images/imagelists/fa-user-170.png'"
+                                                shape="circle"></wm-picture>
+                                            </wm-gridcolumn>
+                                            <wm-gridcolumn columnwidth="8" name="gridcolumn158_1">
+                                                <wm-text name="textAddMessage" placeholder="Type a message....." updateon="default"></wm-text>
+                                            </wm-gridcolumn>
+                                            <wm-gridcolumn columnwidth="3" name="gridcolumn159_1">
+                                                <wm-button class="btn-primary" caption="Post" type="button" margin="unset 0.5em" name="buttonAddMessage" iconclass="wi wi-send" on-click="buttonAddMessageClick($event, $scope)" disabled="bind:!Widgets.textAddMessage.datavalue"></wm-button>
+                                                <wm-button class="btn-default" caption="Tag People" type="button" margin="unset 0.5em" name="button17" iconclass="wi wi-tag" on-click="Widgets.dialogTagPeople.open()" badgevalue="bind:Variables.PeopleList.dataSet.length"></wm-button>
+                                            </wm-gridcolumn>
+                                        </wm-gridrow>
+                                    </wm-layoutgrid>
+                                </wm-tabpane>
                                 <wm-tabpane name="tabpaneMAPS" title="MAPS">
                                     <wm-layoutgrid name="layoutgrid17">
                                         <wm-gridrow name="gridrow61">
@@ -685,6 +725,88 @@
                 <wm-button class="btn-secondary" caption="Cancel" type="button" margin="unset 0.5em" name="buttonCloseProjectDescription" iconclass="wi wi-cancel" on-click="Widgets.dialogEditProjectDescription.close()"></wm-button>
             </wm-dialogactions>
             <wm-richtexteditor name="richtexteditorUpdateDescription" datavalue="bind:Widgets.htmlProjectDescription.content"></wm-richtexteditor>
+        </wm-dialog>
+    </wm-view>
+    <wm-view class="dialog-view" name="viewTagPeople">
+        <wm-dialog dialogtype="design-dialog" modal="true" title="Tag People" iconclass="wi wi-user" name="dialogTagPeople" width="70%">
+            <wm-layoutgrid name="layoutgrid4">
+                <wm-gridrow name="gridrow20" padding="unset unset 2em unset">
+                    <wm-gridcolumn columnwidth="12" name="gridcolumn31_3">
+                        <wm-label padding="unset 0.5em unset unset" name="Instructions" caption="You may tag as many people as you like by searching and clicking “Tag Person”." horizontalalign="center" textalign="left"></wm-label>
+                    </wm-gridcolumn>
+                </wm-gridrow>
+                <wm-gridrow name="gridrow13">
+                    <wm-gridcolumn columnwidth="2" name="gridcolumn28_1"></wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="7" name="gridcolumn18_1">
+                        <wm-composite name="composite5">
+                            <wm-label class="col-md-3 form-control-static" name="label8" caption="Search People" width="20%" fontweight="bold"></wm-label>
+                            <wm-container class="col-md-9" name="container5" width="80%">
+                                <wm-search name="textSearchPeople" placeholder="Search by People Email" dataset="bind:Variables.GetPeople.dataSet" searchkey="email" displaylabel="bind:$[data[$i].email]" displayimagesrc="photo" datafield="All Fields" on-submit="textSearchMunicipalitiesSubmit($event, $scope)"
+                                required="true" width="100%"></wm-search>
+                            </wm-container>
+                        </wm-composite>
+                    </wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="3" name="gridcolumn24" horizontalalign="left">
+                        <wm-button class="btn-default btn-primary" caption="Tag people" type="button" margin="unset 0.5em" name="ButtonTagPeople" iconclass="wi wi-tag-faces" on-click="ButtonTagPeopleClick($event, $scope)" horizontalalign="left"></wm-button>
+                    </wm-gridcolumn>
+                </wm-gridrow>
+                <wm-gridrow name="gridrow14" padding="2px unset unset unset">
+                    <wm-gridcolumn columnwidth="2" name="gridcolumn31"></wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="7" name="gridcolumn20_1" padding="2em unset">
+                        <wm-panel iconclass="wi wi-person-add" name="panel1" title="Tagged People">
+                            <wm-livelist listclass="list-group" itemclass="list-group-item" template="true" class="media-list" dataset="bind:Variables.PeopleList.dataSet" navigation="Scroll" name="livelistTaggedPeople" nodatamessage="No Person is selected. Please search for a Person">
+                                <wm-listtemplate layout="media" name="listtemplate1">
+                                    <wm-layoutgrid name="layoutgrid5">
+                                        <wm-gridrow name="gridrow17_1">
+                                            <wm-gridcolumn columnwidth="2" name="gridcolumn174">
+                                                <wm-picture name="picture4" picturesource="bind:!!Variables.PeopleList.dataSet[$i].id ? 'services/cx2/Users/'+Variables.PeopleList.dataSet[$i].id+'/content/photo' : 'resources/images/imagelists/fa-user-170.png'"
+                                                width="50pt" height="50pt"></wm-picture>
+                                            </wm-gridcolumn>
+                                            <wm-gridcolumn columnwidth="7" name="gridcolumn25_1">
+                                                <wm-label padding="unset 0.5em .5em 0.5em" name="label11" caption="bind:Variables.PeopleList.dataSet[$i].firstName+&quot; &quot;+Variables.PeopleList.dataSet[$i].lastName" width="100%" fontweight="bold"></wm-label>
+                                                <wm-label padding="unset 0.5em" name="label12" caption="bind:Variables.PeopleList.dataSet[$i].email" width="100%"></wm-label>
+                                            </wm-gridcolumn>
+                                            <wm-gridcolumn columnwidth="3" name="gridcolumn29">
+                                                <wm-button class="btn-default btn-primary" caption="Remove" type="button" margin="unset 0.5em" name="buttonRemove" iconclass="wi wi-delete" on-click="buttonRemoveClick($event, $scope, item, currentItemWidgets)"></wm-button>
+                                            </wm-gridcolumn>
+                                        </wm-gridrow>
+                                    </wm-layoutgrid>
+                                </wm-listtemplate>
+                            </wm-livelist>
+                        </wm-panel>
+                    </wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="3" name="gridcolumn30"></wm-gridcolumn>
+                </wm-gridrow>
+                <wm-gridrow name="gridrow15_1"></wm-gridrow>
+            </wm-layoutgrid>
+            <wm-dialogactions name="dialogactions6">
+                <wm-button class="btn-secondary" caption="Cancel" on-click="closeDialog()" name="button14" iconclass="wi wi-cancel"></wm-button>
+            </wm-dialogactions>
+        </wm-dialog>
+    </wm-view>
+    <wm-view class="dialog-view" name="viewShowTaggedPeople">
+        <wm-dialog dialogtype="design-dialog" modal="true" title="Tagged People" iconclass="wi wi-tag-faces" name="dialogShowTaggedPeople">
+            <wm-dialogactions name="dialogactions7">
+                <wm-button class="btn-secondary" caption="Close" on-click="closeDialog()" name="button18" iconclass="wi wi-cancel"></wm-button>
+            </wm-dialogactions>
+            <wm-livelist listclass="list-group" itemclass="list-group-item" template="true" class="media-list" dataset="bind:Variables.GetTaggedPeopleListByMessage.dataSet" navigation="Scroll" name="livelistTaggedPeopleForMessage" nodatamessage="No Person is selected. Please search for a Person"
+            orderby="id:desc">
+                <wm-listtemplate layout="media" name="listtemplate1">
+                    <wm-layoutgrid name="layoutgrid5">
+                        <wm-gridrow name="gridrow17_1">
+                            <wm-gridcolumn columnwidth="2" name="gridcolumn174">
+                                <wm-picture name="picture4" picturesource="bind:!!Variables.GetTaggedPeopleListByMessage.dataSet.data[$i].users.id? 'services/cx2/Users/'+Variables.GetTaggedPeopleListByMessage.dataSet.data[$i].users.id+'/content/photo' : 'resources/images/imagelists/fa-user-170.png'"
+                                width="50pt" height="50pt"></wm-picture>
+                            </wm-gridcolumn>
+                            <wm-gridcolumn columnwidth="10" name="gridcolumn25_1">
+                                <wm-label padding="unset 0.5em .5em 0.5em" name="label11" caption="bind:Variables.GetTaggedPeopleListByMessage.dataSet.data[$i].users.firstName+' '+Variables.GetTaggedPeopleListByMessage.dataSet.data[$i].users.lastName" width="100%"
+                                fontweight="bold"></wm-label>
+                                <wm-label padding="unset 0.5em" name="label12" caption="bind:Variables.GetTaggedPeopleListByMessage.dataSet.data[$i].users.email" width="100%"></wm-label>
+                            </wm-gridcolumn>
+                        </wm-gridrow>
+                    </wm-layoutgrid>
+                </wm-listtemplate>
+            </wm-livelist>
         </wm-dialog>
     </wm-view>
 </wm-page>
