made DevDataEntry nav links invisible except to CXAdmin. Added explanatory text to EditForm and tweaked form field dialog spacing so boxes weren't touching Files modified - [leftnav.html,pages-config.json,EditForm.html]

--- a/src/main/webapp/pages/leftnav/leftnav.html
+++ b/src/main/webapp/pages/leftnav/leftnav.html
@@ -19,13 +19,13 @@
             <wm-anchor name="anchor6" iconclass="wi wi-phone" caption="Support" on-click="Variables.goToPage_Support.invoke()"></wm-anchor>
         </wm-nav-item>
         <wm-nav-item name="nav_item7">
-            <wm-anchor name="anchor7" iconclass="wi wi-file" caption="DevDataEntry" on-click="Variables.goToPage_DataEntry.invoke()"></wm-anchor>
+            <wm-anchor name="anchor7" iconclass="wi wi-file" caption="DevDataEntry" on-click="Variables.goToPage_DataEntry.invoke()" accessroles="CXAdmin"></wm-anchor>
         </wm-nav-item>
         <wm-nav-item name="nav_item9">
-            <wm-anchor name="anchor9" iconclass="wi wi-file" caption="Forms DevDataEntry" on-click="Variables.goToPage_DevFormDataEntry.invoke()"></wm-anchor>
+            <wm-anchor name="anchor9" iconclass="wi wi-file" caption="Forms DevDataEntry" on-click="Variables.goToPage_DevFormDataEntry.invoke()" accessroles="CXAdmin"></wm-anchor>
         </wm-nav-item>
         <wm-nav-item name="nav_item9_1">
-            <wm-anchor name="anchor9_1" iconclass="wi wi-file" caption="Projects DevDataEntry" on-click="Variables.goToPage_ProjectsDevDataEntry.invoke()"></wm-anchor>
+            <wm-anchor name="anchor9_1" iconclass="wi wi-file" caption="Projects DevDataEntry" on-click="Variables.goToPage_ProjectsDevDataEntry.invoke()" accessroles="CXAdmin"></wm-anchor>
         </wm-nav-item>
     </wm-nav>
 </wm-partial>
