--- a/src/main/webapp/pages/EditForm/EditForm.html
+++ b/src/main/webapp/pages/EditForm/EditForm.html
@@ -38,7 +38,7 @@
                                                             placeholder="" hint="This hides the form design from standard CivicXpress users and makes it available only to Municipality Employees."></wm-form-field>
                                                         </wm-gridcolumn>
                                                     </wm-gridrow>
-                                                    <wm-gridrow name="gridrow1333">
+                                                    <wm-gridrow name="gridrow1333" padding="unset unset 1em unset">
                                                         <wm-gridcolumn columnwidth="12" name="gridcolumn1333">
                                                             <wm-form-field displayname="Instructions" widget="richtext" show="true" type="custom" name="instructions" key="instructions" hint="This is the first thing that a user will see when they launch the New Form wizard."></wm-form-field>
                                                         </wm-gridcolumn>
@@ -207,7 +207,7 @@
                                                                 maxchars="255" inputtype="text" placeholder="Enter value" defaultvalue="bind:Variables.ReadFormType.dataSet.data[$i].stateFeeAccountingCode"></wm-form-field>
                                                             </wm-gridcolumn>
                                                         </wm-gridrow>
-                                                        <wm-gridrow name="gridrow41_1">
+                                                        <wm-gridrow name="gridrow41_1" padding="unset unset 1em unset">
                                                             <wm-gridcolumn columnwidth="6" name="gridcolumn66">
                                                                 <wm-form-field name="basementFee" displayname="Basement Fee" show="true" primary-key="false" generator="assigned" key="basementFee" type="string" widget="text" maxchars="255" defaultvalue="bind:Variables.ReadFormType.dataSet.data[$i].basementFee"
                                                                 placeholder="Enter value" inputtype="text"></wm-form-field>
@@ -242,7 +242,7 @@
                                 <wm-layoutgrid name="layoutgrid6">
                                     <wm-gridrow name="gridrow55">
                                         <wm-gridcolumn columnwidth="12" name="gridcolumn80">
-                                            <wm-label padding="unset 0.5em" name="label15" caption="You can assign this Form Design to one or many Form Categories. This will affect where this Form appears to CivicXpress users, makes the Form searchable by Category, and is used to produce Municipality Analytics."></wm-label>
+                                            <wm-label padding="unset 0.5em" name="label15" caption="You can assign this Form Design to one or many Form Categories. This will affect where the Form appears to CivicXpress users, makes the Form searchable by Category, and is used to generate Municipality Analytics."></wm-label>
                                         </wm-gridcolumn>
                                     </wm-gridrow>
                                     <wm-gridrow name="gridrow26">
@@ -316,7 +316,7 @@
                                 <wm-layoutgrid name="layoutgrid14">
                                     <wm-gridrow name="gridrow58">
                                         <wm-gridcolumn columnwidth="12" name="gridcolumn85">
-                                            <wm-label padding="unset 0.5em" name="label17" caption="Form Statuses are the steps that a form takes while being processed from submission to completion. &quot;Draft&quot; and &quot;Submitted&quot; are included by default, and a minimum of two Form Statuses are required."></wm-label>
+                                            <wm-label padding="unset 0.5em" name="label17" caption="Form Statuses are the steps that a form takes while being processed, from submission to completion. &quot;Draft&quot; and &quot;Submitted&quot; are included by default, and a minimum of two Form Statuses are required."></wm-label>
                                             <wm-label padding="unset 0.5em" name="label18" caption="Use the Edit icon to view the Form Status Options and control how you would like this Form Design to be processed by your Municipality."></wm-label>
                                         </wm-gridcolumn>
                                     </wm-gridrow>
