updated minimum/maximum display order values for Form Fields to disallow negative numbers Files modified - [EditForm.html]

--- a/src/main/webapp/pages/EditForm/EditForm.html
+++ b/src/main/webapp/pages/EditForm/EditForm.html
@@ -588,10 +588,10 @@
                 </wm-gridrow>
                 <wm-gridrow name="gridrow46">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn76">
-                        <wm-composite name="composite9">
+                        <wm-composite name="composite9" required="false">
                             <wm-label class="col-md-3 form-control-static" name="label13" caption="Display Order" fontweight="bold"></wm-label>
                             <wm-container class="col-md-9" name="container8">
-                                <wm-text name="textFormFieldDisplayOrder" type="number" placeholder="Enter number" datavalue="bind:Variables.Cx2FormTypeFieldsData.dataSet.data.length+1" maxvalue="2147483647" minvalue="-2147483648"></wm-text>
+                                <wm-text name="textFormFieldDisplayOrder" type="number" placeholder="Enter number" datavalue="bind:Variables.Cx2FormTypeFieldsData.dataSet.data.length+1" maxvalue="1234567890" minvalue="1"></wm-text>
                             </wm-container>
                         </wm-composite>
                     </wm-gridcolumn>
