ManageForms- set character limit on Form Design Name to prevent error. EditForm- added column next to "Separate by Dashes" to limit the "clickable" area Files modified - [EditForm.html,ManageForms.html,pages-config.json]

--- a/src/main/webapp/pages/EditForm/EditForm.html
+++ b/src/main/webapp/pages/EditForm/EditForm.html
@@ -84,9 +84,10 @@
                                                             </wm-gridcolumn>
                                                         </wm-gridrow>
                                                         <wm-gridrow name="gridrow51">
-                                                            <wm-gridcolumn columnwidth="12" name="gridcolumn76_3">
+                                                            <wm-gridcolumn columnwidth="3" name="gridcolumn76_3">
                                                                 <wm-form-field displayname="Separate by Dashes" widget="checkbox" show="true" type="custom" name="prefixDashes"></wm-form-field>
                                                             </wm-gridcolumn>
+                                                            <wm-gridcolumn columnwidth="9" name="gridcolumn85_1"></wm-gridcolumn>
                                                         </wm-gridrow>
                                                         <wm-gridrow name="gridrow46_1">
                                                             <wm-gridcolumn columnwidth="12" name="gridcolumn75_1">
