--- a/src/main/webapp/pages/ManageForms/ManageForms.html
+++ b/src/main/webapp/pages/ManageForms/ManageForms.html
@@ -93,7 +93,7 @@
                 <wm-layoutgrid columns="3" name="layoutgrid5">
                     <wm-gridrow name="gridrow18">
                         <wm-gridcolumn columnwidth="12" name="gridcolumn32">
-                            <wm-form-field name="formType" displayname="Form Design Name" show="true" primary-key="false" generator="assigned" key="formType" type="string" required="required" widget="text" maxchars="119" inputtype="text" placeholder="Enter value"></wm-form-field>
+                            <wm-form-field name="formType" displayname="Form Design Name" show="true" primary-key="false" generator="assigned" key="formType" type="string" required="required" widget="text" maxchars="108" inputtype="text" placeholder="Enter value"></wm-form-field>
                         </wm-gridcolumn>
                     </wm-gridrow>
                 </wm-layoutgrid>
@@ -130,7 +130,7 @@
         </wm-dialog>
     </wm-view>
     <wm-view class="dialog-view" name="view3">
-        <wm-dialog dialogtype="design-dialog" modal="true" title="bind:'Delete '+Widgets.gridFormTypes.selecteditem.FormType" iconclass="wi wi-delete" name="dialogDeleteFormDesign">
+        <wm-dialog dialogtype="design-dialog" modal="true" title="bind:'Delete '+Widgets.gridFormTypes.selecteditem.FormType" iconclass="wi wi-trash" name="dialogDeleteFormDesign">
             <wm-layoutgrid name="layoutgrid5_2">
                 <wm-gridrow name="gridrow9">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn10" horizontalalign="center">
